Fix issue with overflow of display contents.

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ html, body {
     justify-content: start;
     align-items: center;
     padding-left: 40px;
+    overflow-x: auto
 }
 
 .op-display {
